# C-Journey

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml
.claude/: writing-style.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  content-correction.yml  content-proposal.yml
.github/workflows/: ci.yml  deploy.yml
assets/: .gitkeep
documents/: README.md  index.md  roadmap.md
documents/.vitepress/: config.ts
documents/00-dev-environment/: 01-toolchain-health-check.md  02-save-temps-and-four-stages.md  03-preprocessor-deep-dive.md  04-compile-to-assembly.md  05-object-files-and-symbols.md  06-linking-and-static-libs.md  07-dynamic-libs-and-dlopen.md  08-warning-flags.md  09-standards-and-optimization.md  1-compiling-and-debugging.md  10-sanitizer-gate.md  11-make-basics.md  12-cmake-basics.md  13-gdb-basics.md  14-gdb-advanced.md  15-git-workflow.md  16-github-actions.md  17-format-and-quality-gate.md  git-basic-operations.md
documents/01-c-basics/: 01-program-structure-and-compilation.md  02-integer-types-and-sizeof.md  02A-data-types-basics.md  02B-float-char-const-cast.md  03-integer-promotion-overflow.md  03A-operators-basics.md  03B-bitwise-and-evaluation.md  04-control-flow.md  04-float-char-const-cast.md  05-function-basics.md  05-operators-basics.md  06-bitwise-and-shift.md  06-scope-and-storage.md  07-control-flow.md  07A-pointer-essentials.md  07B-pointers-arrays-const.md  08-functions.md  08A-multi-level-pointers.md  08B-restrict-incomplete-types.md  09-function-pointers-and-callbacks.md  09-scope-storage-static.md  10-arrays-deep-dive.md  10-arrays.md  11-c-strings-and-buffer-safety.md  11-c-strings-and-libc.md  12-basic-io.md  12-struct-and-memory-alignment.md  13-struct-union-enum.md  13-union-enum-bitfield-typedef.md  14-dynamic-memory.md  15-preprocessor-and-multifile.md  16-file-io-and-stdlib.md  index.md
documents/02-pointers-memory/: 0-pointers-memory-and-bitops.md  01-what-is-a-pointer.md  02-pointer-arithmetic.md  03-pointer-parameters.md  04-const-qualifier.md  05-pointer-array-string.md  06-malloc-free-basics.md  07-dynamic-memory-pitfalls.md  08-multi-level-pointers.md  09-function-pointers.md  1-c-pitfalls-and-traps.md  10-complex-declarations-typedef.md  11-void-ptr-and-byte-ops.md  12-memory-layout.md
documents/03-data-structures/: 0-generic-containers-in-c.md  01-singly-linked-list.md  02-doubly-linked-list.md  03-stack.md  04-queue.md  05-dynamic-array.md  06-binary-tree.md  07-bst.md  08-hash-table.md  09-sorting-quadratic.md  1-recursion-and-call-stack.md  10-quicksort-mergesort.md  11-binary-search.md  12-big-o-complexity.md  2-dynamic-array.md  3-linked-list.md  4-algorithm-analysis.md
documents/04-engineering/: 0-cmake-and-modules.md  01-header-contracts.md  02-api-and-opaque-types.md  03-error-handling.md  04-make-deep.md  05-cmake-engineering.md  06-libs-and-linking.md  07-testing-with-unity.md  (+13 more)
examples/: README.md  hello.c
examples/stage4-cmake-lib/: CMakeLists.txt  MathlibConfig.cmake
examples/stage4-cmake-lib/include/: mathlib.h
examples/stage4-cmake-lib/src/: mathlib.c
exercises/: .gitkeep
projects/: README.md
projects/clib-utilities/: CMakeLists.txt  README.md
projects/clib-utilities/Basic_Utils/Includes/: CCSTDLib_BasicUtils.h  CCSTDLib_Index_Handle.h  CCSTDLibs_MyCompiles.h
projects/clib-utilities/SystemRelated/Includes/: CCMutex.h  CCThread.h
projects/clib-utilities/SystemRelated/Sources/: CCDynamicLoader.c  CCMutex.c  CCSTDLib_FetchError.c  CCSTDLib_MultiByte_WCharAdapter.c  CCThread.c
projects/clib-utilities/test/: testDynamicArray.c  testDynamicPlugin.c  test_DynamicArray_unity.c
projects/clib-utilities/test/unity/: unity.c  unity.h
scripts/: build.ts  build_examples.py  clang_tidy_check.py  tags.py  validate_frontmatter.py
(+72 files in other folders)
